# ginger-donkey

./: .gitignore  .python-version  README.md  pyproject.toml
src/ginger_donkey/: entity.py  poke_counter.py  util.py
src/util/: poke-config.txt
tests/: test_functional.py  test_unit.py
